[ IzSound x.y.z ] (2003.xx.yy) release-x-y-z

2003.09.27 (Julien Ponge):
* Added a new DSP DelayExtraStereo that applies a well-know stereo expansion
  effect by delaying one of the two stereo channels.

2003.09.22 (Julien Ponge):
* Modified the bootstrapping process to call autoheader before automake.
* Added config.h.in (generated by autoheader) in the list of files to delete
  when calling the stripdown.py script.

[ IzSound 0.0.1 ] (2003.09.22) release-0-0-1

2003.09.22 (Julien Ponge):
* Initial IzSound release.
* The project homepage is at http://www.izforge.com/izsound/ .
* The developer services are hosted by BerliOS.