@@ -1,0 +1,76 @@
+/*
+ * IzSound - Copyright (c) 2003 Julien PONGE - All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+ * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+ * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+ * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+ * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+ * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#ifndef IZSOUND_DEMULTIPLEXER_H
+#define IZSOUND_DEMULTIPLEXER_H
+
+#include <iterator>
+#include <algorithm>
+
+#include <dspunit.h>
+
+namespace izsound
+{
+
+/**
+ * A DSP unit that duplicates an input stream into several output streams.
+ *
+ * This DSP unit has one input slot and a variable number of output slots.
+ *
+ * @author Julien PONGE <julien@izforge.com>
+ */
+class DeMultiplexer : public DspUnit
+{
+
+private:
+
+protected:
+
+  /**
+   * Duplicates the stream.
+   */
+  virtual void performDsp();
+
+public:
+
+  /**
+   * The constructor.
+   *
+   * @param outCount The number of output streams.
+   * @param sampleRate The audio chain sample rate.
+   */
+  DeMultiplexer(const unsigned int &outCount = 2,
+                const unsigned int &sampleRate = 44100);
+
+  /**
+   * The destructor.
+   */
+  virtual ~DeMultiplexer();
+
+};
+
+}
+
+#endif
